first cut sprint 16 plan

--- a/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
+++ b/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
@@ -1,9 +1,9 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday August 10 to August 20
 
 ## Goal/notes for Sprint
 
 1. start BETA-16
-2. continue/complete connector framework/code generation
+2. see assignments
 
 ---
 
@@ -17,7 +17,7 @@
 
 ### Deliverables
 
-
+***TBD AT END OF SPRINT***
 
 ---
 
@@ -26,32 +26,54 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - using Geppetto screen designer create a professional Tkt app
+  - finish all HTML/CSS for new Geppetto V12 version
+  - finish new Geppetto generation template
   - continue developing static pages and add more templates until we get to nine (9) total
+  - test to see if the fix George made allows him to create a professional screen that saves the information correctly
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - JP
+
   - priority bugs as they arise
+  - support team with KT
   - Connector framework
-    - complete the Connector framework with help of who ever is around
+    - continue testing attempt:
+      - [Salesforce](https://dzone.com/articles/leveraging-salesforce-without-using-salesforce?edition=599293&utm_source=dzone&utm_medium=email&utm_campaign=dzone&utm_content=%5B%5Brssitem_title%5D%5D%20-%20%5B%5Brss_title%5D%5D)
+      - Twilio
+  - Start KT ***using both context and sequence diagrams***
+    - document connector framework
+    - document Admin generation
+    - document screen designer ***TBD***
+    - Modifiers support for SEF ***TBD***
+      - allowing search criteria to be passed from screen designer
 
 - Harish
-  - add IBM template
-  - start SEF with Naveenkumar
-  - HOP: finish Angular course, start learning GrapesJS
+
+  - finish SEF front end generation
+  - with Surrender start KT for the new version of Geppetto UI
+  - HOP: continue learning GrapesJS
 
 - Naveenkumar
-  - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+
+  - finish back end generation for SEF
+  - HOP: continue Angular course
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
-  - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
-  - HOP: finish Angular course
+
+  - New version of Geppetto UI with Angular 12
+    - finish loging in 
+    - add landing page displaying projects
+    - add project create dialog and create a project
+    - start Google Analytics ***TBD***
+    - KT for Harish on this new version
+  - HOP: continue node course
+
+- Saranya
+  - finish WeConnect template
+  - finish template doc updates
 
 ---
 
