next set of updates to the plan

--- a/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
+++ b/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
@@ -46,6 +46,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - Start KT ***using both context and sequence diagrams***
     - document connector framework
     - document Admin generation
+      - is Vault part of this?
     - document screen designer ***TBD***
     - Modifiers support for SEF ***TBD***
       - allowing search criteria to be passed from screen designer
