updating sprint notes

--- a/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
+++ b/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
@@ -15,6 +15,10 @@
   - Tuesday 8-10 - planned leave
   - Wednesday 8-11 - planned leave
 
+- Naveen was out or impacted for work on the following:
+  - Wednesday 8-11 - spent most of the day on new project per thomas
+  - Monday 8-16 - was out sick
+
 ### Deliverables
 
 ***TBD AT END OF SPRINT***
@@ -44,6 +48,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
       - [Salesforce](https://dzone.com/articles/leveraging-salesforce-without-using-salesforce?edition=599293&utm_source=dzone&utm_medium=email&utm_campaign=dzone&utm_content=%5B%5Brssitem_title%5D%5D%20-%20%5B%5Brss_title%5D%5D)
       - Twilio
   - Start KT ***using both context and sequence diagrams***
+    - document screen designer
     - document connector framework
     - document Admin generation
       - is Vault part of this?
