--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -14,7 +14,8 @@
         "INPUT2": "கடவுச்சொல்",
         "BUTTON_TXT": "உள்நுழை",
         "ACCOUNT": "கணக்கு இல்லையா?",
-        "SIGNUP": "பதிவு"
+        "SIGNUP": "பதிவு",
+        "LOGIN_ERROR": "தவறான பயனர்பெயர் அல்லது கடவுச்சொல்"
     },
     "ABOUT": {
         "ABOUT": "பற்றி",
