started the new docs structure

--- a/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
+++ b/docs/planning/2021/sprints/sprint 16/08-10-to-08-20.md
@@ -18,6 +18,7 @@
 - Naveen was out or impacted for work on the following:
   - Wednesday 8-11 - spent most of the day on new project per thomas
   - Monday 8-16 - was out sick
+  - Thursday 8-19 and Friday 8-20 - apparently emergency family emergency
 
 ### Deliverables
 
