--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -17,6 +17,20 @@
         "SIGNUP": "பதிவு",
         "LOGIN_ERROR": "தவறான பயனர்பெயர் அல்லது கடவுச்சொல்"
     },
+    "SIGNUP": {
+        "PLEASE_REGISTER": "தயவுசெய்து பதிவு செய்யவும்",
+        "FIRSTNAME": "முதல் பெயர்",
+        "LASTNAME": "கடைசி பெயர்",
+        "EMAIL": "மின்னஞ்சல்",
+        "PASSWORD": "கடவுச்சொல்",
+        "REGISTER": "பதிவு",
+        "ALREADY": "ஏற்கனவே பதிவு செய்யப்பட்டது?",
+        "LOGIN": "இங்கே உள்நுழைக",
+        "FNAME_ERROR": "சரியான முதல் பெயராக இருக்க வேண்டும்",
+        "LNAME_ERROR": "செல்லுபடியாகும் கடைசி பெயர் இருக்க வேண்டும்",
+        "EMAIL_ERROR": "சரியான மின்னஞ்சல் அடையாளமாக இருக்க வேண்டும்",
+        "PASSWORD_ERROR": "ஒரு கடவுச்சொல் 8 எழுத்துகளாக இருக்க வேண்டும் மற்றும் ஒரு பெரிய எழுத்து, சிறிய எழுத்து மற்றும் ஒரு சிறப்பு எழுத்து இருக்க வேண்டும்"
+    },
     "ABOUT": {
         "ABOUT": "பற்றி",
         "CLOSE": "மூடு",
@@ -24,5 +38,24 @@
         "BUILD_VERSION": "பதிப்பை உருவாக்கவும் :",
         "BUILD_DATE": "உருவாக்க தேதி :",
         "LICENCE": "திறந்த மூல உரிமங்கள் :"
+    },
+    "PROJECT": {
+        "APPLICATION": "என் விண்ணப்பங்கள்",
+        "GEPPETTO_APPLICATION": "ஜெபெட்டோ மாதிரி விண்ணப்பம்",
+        "CREATE_PROJ": "திட்டத்தை உருவாக்கவும்",
+        "NAME": "பெயர்",
+        "PRIMARY_LANG": "முதன்மை மொழி",
+        "SECONDARY_LANG": "இரண்டாம் நிலை மொழி",
+        "SELECT_TEMP": "வார்ப்புருவைத் தேர்ந்தெடுக்கவும்",
+        "CREATE_BTN": "உருவாக்கு",
+        "CANCEL_BTN": "ரத்து",
+        "SELECT_SEC_LANG": "இரண்டாம் மொழியைத் தேர்ந்தெடுக்கவும்",
+        "NO_PROJECTS": "திட்டங்கள் இல்லை.",
+        "CONFIRM_DELETE": "தயவுசெய்து இந்த திட்டத்தை நீக்க உறுதிப்படுத்து என்பதைக் கிளிக் செய்யவும்?",
+        "CONFIRM_BTN": "உறுதிப்படுத்து",
+        "NAME_ERROR": "பெயர் தேவை",
+        "ALREADY_NAME_EXIST": "பெயர் ஏற்கனவே உள்ளது",
+        "SPECIAL_NAME_ERROR": "பெயர் எழுத்துக்களுடன் தொடங்க வேண்டும், சிறப்பு எழுத்துக்கள் அனுமதிக்கப்படாது",
+        "RESERVED_NAME_ERROR": "பெயர் இருப்பு வார்த்தையாக இருக்கக்கூடாது"
     }
 }
