--- a/application/clients/desktopV2/src/assets/i18n/en.json
+++ b/application/clients/desktopV2/src/assets/i18n/en.json
@@ -1,4 +1,10 @@
 {
+    "HEADER": {
+        "GOBACK": "Go Back",
+        "HOME": "Home",
+        "LOGOUT": "Logout",
+        "SIGNIN": "SignIn"
+    },
     "HOME": {
         "HEADING1": "The Cloud Native",
         "HEADING2": "​​​​​​​Low Code Platform",
