--- a/application/clients/desktopV2/src/assets/i18n/es.json
+++ b/application/clients/desktopV2/src/assets/i18n/es.json
@@ -1,4 +1,10 @@
 {
+    "HEADER": {
+        "GOBACK": "Regresa",
+        "HOME": "hogar",
+        "LOGOUT": "Cerrar sesión",
+        "SIGNIN": "Registrarse"
+    },
     "HOME": {
         "HEADING1": "El nativo de la nube",
         "HEADING2": "​​​​​​​Plataforma Low Code",
