--- a/application/clients/desktopV2/src/assets/i18n/ta.json
+++ b/application/clients/desktopV2/src/assets/i18n/ta.json
@@ -1,4 +1,10 @@
 {
+    "HEADER": {
+        "GOBACK": "திரும்பி செல்",
+        "HOME": "வீடு",
+        "LOGOUT": "வெளியேறு",
+        "SIGNIN": "உள்நுழைவு"
+    },
     "HOME": {
         "HEADING1": "தி கிளவுட் நேட்டிவ்",
         "HEADING2": "​​​​​​​குறைந்த குறியீடு தளம்",
