started sprint planning

--- a/docs/planning/2021/sprints/sprint 17/08-24-to-09-03.md
+++ b/docs/planning/2021/sprints/sprint 17/08-24-to-09-03.md
@@ -11,9 +11,46 @@
 
 ### General personnel updates
 
+- no one was out this sprint 
+
 ### Deliverables
 
-***TBD AT END OF SPRINT***
+- Ajith
+  - finish all HTML/CSS for new Geppetto V12 version - **all major screens completed**
+  - finish new Geppetto generation template **done**
+  - continue developing static pages and add more templates until we get to nine (9) total **started new e-commerce (bike)**
+  - start testing the new V12 UI to see how it matches with his recommendations **started -this will be ongoing**
+
+- JP
+
+  - priority bugs as they arise  **fixed issue with generation for ticket app**
+  - support team with KT **ongoing**
+  - Connector framework
+    - continue testing attempt:
+      - Twilio **done as a result we now have solid ideas of where to take this framework specially with the variable URL issues**
+  - KT ***using both context and sequence diagrams***
+    - document screen designer **this was moved to Surrender since he started the new version of screen designer**
+    - document connector framework **ongoing**
+    - document Admin generation
+      - is Vault part of this?
+    - document screen designer ***N/A moved to Surrender***
+    - Modifiers support for SEF ***TBD***
+      - allowing search criteria to be passed from screen designer
+
+- Harish
+
+  - finish SEF front end generation **done**
+  - pickup where Naveen left off on the backend SEF generator **started**
+  - work on KT with JP **ongoing**
+
+- Saranya
+  - finish WeConnect template - on generation side **completed**
+  - finish template doc updates **mostly done some tweaks needed**
+  - start the new Geppetto template **started last day of sprint**
+
+- Avinash
+  - joined September 1 which was at the end of the sprint
+  - started with the 10d Node course
 
 ---
 
@@ -27,7 +64,7 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - continue developing static pages and add more templates until we get to nine (9) total
   - start testing the new V12 UI to see how it matches with his recommendations
   - test to see if the fix George made allows him to create a professional screen that saves the information correctly
-
+  
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
