more doc refactor as well as planning

--- a/docs/planning/2021/sprints/sprint 18/09-07-to-09-17.md
+++ b/docs/planning/2021/sprints/sprint 18/09-07-to-09-17.md
@@ -10,11 +10,11 @@
 
 ## Sprint completion notes
 
--TBD COMPLETED AT THE END OF THE SPRINT
-
 ### General personnel updates
 
--TBD COMPLETED AT THE END OF THE SPRINT
+-JP
+
+- left early due to health on Monday Sept 6th
 
 ### Deliverables
 
@@ -27,11 +27,10 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - finish all HTML/CSS for new Geppetto V12 version
-  - finish new Geppetto generation template
+  - finish first e-commerce UX (bike)
   - continue developing static pages and add more templates until we get to nine (9) total
   - start testing the new V12 UI to see how it matches with his recommendations
-  - test to see if the fix George made allows him to create a professional screen that saves the information correctly
+  - test to see if the fix George made allows him to create a professional screen that saves the information correctly **TBD**
   
 ## Developer Assignments
 
@@ -45,18 +44,15 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - continue testing attempt:
       - Twilio
   - KT ***using both context and sequence diagrams***
-    - document screen designer
     - document connector framework
     - document Admin generation
       - is Vault part of this?
-    - document screen designer ***TBD***
     - Modifiers support for SEF ***TBD***
       - allowing search criteria to be passed from screen designer
 
 - Harish
 
-  - finish SEF front end generation
-  - pickup where Naveen left off on the backend SEF generator
+  - finish SEF back end generation
   - work on KT with JP
 
 - Surrender
