--- a/docs/planning/2021/sprints/sprint 18/09-07-to-09-17.md
+++ b/docs/planning/2021/sprints/sprint 18/09-07-to-09-17.md
@@ -12,9 +12,16 @@
 
 ### General personnel updates
 
--JP
+- all
+  - there was a holiday on Friday Sept 10 office was closed for the weekend
+  - team worked on the following Saturdays
+    - September 4
 
-- left early due to health on Monday Sept 6th
+- JP
+  - left early due to health on Monday Sept 6th
+
+- Rahul RK
+  - joined 10d on Sept 8th will focus on Angular
 
 ### Deliverables
 
@@ -29,7 +36,8 @@ Please note to look for specifics tasks in Github this just gives the overall go
 - Ajith
   - finish first e-commerce UX (bike)
   - continue developing static pages and add more templates until we get to nine (9) total
-  - start testing the new V12 UI to see how it matches with his recommendations
+  - start testing the new V12 UI to see how it matches with his recommendations **ongoing**
+  - start new geppetto website to match the 10d site site and colors **TBD**
   - test to see if the fix George made allows him to create a professional screen that saves the information correctly **TBD**
   
 ## Developer Assignments
@@ -40,34 +48,44 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
   - priority bugs as they arise
   - support team with KT
-  - Connector framework
-    - continue testing attempt:
-      - Twilio
-  - KT ***using both context and sequence diagrams***
-    - document connector framework
-    - document Admin generation
-      - is Vault part of this?
-    - Modifiers support for SEF ***TBD***
-      - allowing search criteria to be passed from screen designer
+  - mentor Rahul RK
+  - documentation and diagrams
+    - ERD
+    - Connector framework
+      - complete documentation for the extension/fix for variable url parm issue
+    - Modifiers
+    - Admin Management for generated applications including Vault interaction
+    - Authorization generation - adding users and group
 
 - Harish
 
   - finish SEF back end generation
   - work on KT with JP
+    - focus on Connectors and Modifiers
 
 - Surrender
 
   - New version of Geppetto UI with Angular 12
-    - add the new GrapesJS
-    - continue building out new V12 UI
+    - focus on screen designer
     - start Google Analytics ***TBD***
-    - KT for Harish on this new version
+    - KT from JP
   - HOP: continue node course
 
 - Saranya
-  - finish WeConnect template - on generation side
-  - finish template doc updates
-  - start the new Geppetto template
+  - add new Geppetto template
+  - add new e-commerce template (electric glide)
+  - KT with JP
+  - HOP: The new Authorization SME
+    - start getting info on Camunda DMN
+    - understand the various components in the Authorization
+      - Authorization manager/JWT handling
+      - Group and user creation in the generated applications
+
+- Avinash
+  - continue 10d Node course
+
+- Rahul RK
+  - start Angular course
 
 ---
 
