--- a/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
+++ b/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
@@ -2,17 +2,15 @@
 
 ## Goal/notes for Sprint
 
-1. start BETA-13
-2. continue/complete connector framework/code generation
-3. finish SystemCredentialsManager/Vault generation
-4. Surrender complete Angular course
-5. Harish complete Angular course, adds IBM template, start SEF with Naveen
+1. start BETA-19
+2. this sprint will have heavy focus on KT since this is the last sprint for JP
+3. KT will be achieve via some Electric Glide assignments and tie them back to Geppetto concepts
+
 
 ---
 
 ## Sprint completion notes
 
-- added at the end of the sprint
 
 ---
 
