updated sprint notes

--- a/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
+++ b/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
@@ -1,4 +1,4 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday September 21 to Ocotber 01
 
 ## Goal/notes for Sprint
 
@@ -11,6 +11,15 @@
 
 ## Sprint completion notes
 
+- Sprint started 1 day late because we were finishing ElectricGlide demo
+
+### General personnel updates
+
+-surrender
+
+- was put sick the entire 2nd week of the sprint
+
+### Deliverables
 
 ---
 
