updating sprint 19 plan

--- a/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
+++ b/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
@@ -15,9 +15,10 @@
 
 ### General personnel updates
 
--surrender
-
-- was put sick the entire 2nd week of the sprint
+- surrender
+  - was out sick the entire 2nd week of the sprint
+- Avinash
+  - out sick partially Wed Sep 29, Thursday Sep 30
 
 ### Deliverables
 
@@ -41,20 +42,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
     - complete the Connector framework with help of who ever is around
 
 - Harish
-  - add IBM template
-  - start SEF with Naveenkumar
-  - HOP: finish Angular course, start learning GrapesJS
-
-- Naveenkumar
-  - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+  - finish SEFing Bala We Connect template - lets see how good the doc is
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
-  - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
-  - HOP: finish Angular course
-
+  - New version of Geppetto UI with Angular 12
+    - continue building out new V12 UI
+    - start to integrate new V12 Angular Gen Manager
+    - start Google Analytics ***TBD***
+  
 ---
 
 ## DevOps Assignments
