starting the sprint plan and close out notes for previous plan

--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -1,12 +1,9 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday October 05 to October 15
 
 ## Goal/notes for Sprint
 
-1. start BETA-13
-2. continue/complete connector framework/code generation
-3. finish SystemCredentialsManager/Vault generation
-4. Surrender complete Angular course
-5. Harish complete Angular course, adds IBM template, start SEF with Naveen
+1. start BETA-20
+
 
 ---
 
@@ -28,25 +25,32 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- JP
-  - priority bugs as they arise
-  - Connector framework
-    - complete the Connector framework with help of who ever is around
+- Manavalan
+  - Tech lead activities
 
 - Harish
-  - add IBM template
-  - start SEF with Naveenkumar
-  - HOP: finish Angular course, start learning GrapesJS
+  - add SEF as default landing page to generator
+  - start ReactGenManager using Handlebars
 
-- Naveenkumar
-  - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+- Saranya
+
 
 - Surrender
   - continue to learn GrapesJS by adding pop up to HychartJS 
   - create internationalization in Angular 12
   - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
   - HOP: finish Angular course
+
+- Tamil
+  - continue React Demo app
+  - investigate the use of JHypster to help accelerate the React demo
+
+- Avinash
+  - continue changes to GitHub Deployment Manager
+  - learn handlebars - make sure that you start by setting up a docker container
+
+- GayaThri
+  - start Angular training
 
 ---
 
