more updates on the plan

--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -33,14 +33,16 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - start ReactGenManager using Handlebars
 
 - Saranya
-
+  - finish adding new admin UI to ElectricGlide
+  - add User Manager to ElectricGlide
+  - start adding Admin and User Manager to the Generator with their new UIs
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
-  - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
-  - HOP: finish Angular course
-
+  - continue with Angular 12 Geppetto - focusing on screen designer/GrapesJS
+    - start binding simple text boxes
+  - start the V12 Angular gen manager
+  - coordinate with Harish on ReactGenManager - the handling of GJS components should be the same for React and Angular gen managers
+  
 - Tamil
   - continue React Demo app
   - investigate the use of JHypster to help accelerate the React demo
