--- a/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
+++ b/docs/planning/2021/sprints/sprint 19/09-21-to-10-01.md
@@ -15,12 +15,18 @@
 
 ### General personnel updates
 
+- Rahul quit 10d claiming that his mother needed his attention and he wanted to work from home
 - surrender
   - was out sick the entire 2nd week of the sprint
 - Avinash
-  - out sick partially Wed Sep 29, Thursday Sep 30
+  - out sick partially Wed Sep 29, Thursday Sep 30 and Friday October 1
 
 ### Deliverables
+
+ The sprint was mostly dedicated to KT - some exceptions of new work were:
+
+- Harish mostly completed the SEF but he did not make it the default landing screen
+- JP added the new GCAM style RBAC to ElectricGlide which will allow the removal of Camunda and simply or training since people wont need to learn Camunda
 
 ---
 
