--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -11,6 +11,16 @@
 
 - added at the end of the sprint
 
+### General personnel updates
+
+- Avinash out sick Monday October 4
+
+- Harish out sick Monday October 4
+
+### Deliverables
+
+- added at the end of the sprint
+
 ---
 
 ## UX Assignments
@@ -18,7 +28,7 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - using Geppetto screen designer create a professional Tkt app
+  - using Geppetto screen designer create ElectricGlide screens - this will test the new version of Geppetto UI
   - continue developing static pages and add more templates until we get to nine (9) total
 
 ## Developer Assignments
