--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -17,6 +17,8 @@
 
 - Harish out sick Monday October 4
 
+- Tamil could not advanced on React demo on Monday October 4th, October 5th
+
 ### Deliverables
 
 - added at the end of the sprint
