--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -13,7 +13,7 @@
 
 ### General personnel updates
 
-- Avinash out sick Monday October 4, Tuesday October 5th
+- Avinash out sick Monday October 4, Tuesday October 5th, Wednesday 6th, and Thursday 7th - Finally resigned on Friday October 8th
 
 - Harish out sick Monday October 4
 
