more manager type updates

--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -21,6 +21,8 @@
 
 - Tamil could not advanced on React demo on Monday October 4th, October 5th
 
+- Surrender was on another project on Monday October 11
+
 ### Deliverables
 
 - added at the end of the sprint
