sprint 20 completion notes and assignments for sprint 21

--- a/docs/planning/2021/sprints/sprint 21/10-19-to-10-29.md
+++ b/docs/planning/2021/sprints/sprint 21/10-19-to-10-29.md
@@ -34,24 +34,14 @@ Please note to look for specifics tasks in Github this just gives the overall go
   - Tech lead activities
 
 - Harish
-  - add SEF as default landing page to generator
-  - start ReactGenManager using Handlebars
+  - continue with React Generation
 
 - Saranya
-  - finish adding new admin UI to ElectricGlide
-  - add User Manager to ElectricGlide
-  - start adding Admin and User Manager to the Generator with their new UIs
+  - generate application to use GCAM instead of Camunda
 
 - Surrender
-  - continue with Angular 12 Geppetto - focusing on screen designer/GrapesJS
-    - start binding simple text boxes
-  - start the V12 Angular gen manager
-  - coordinate with Harish on ReactGenManager - the handling of GJS components should be the same for React and Angular gen managers
+  - Generate app with V12 Angular gen manager
   
-- Tamil
-  - continue React Demo app
-  - investigate the use of JHypster to help accelerate the React demo
-
 - Gayathri
   - continue Angular training
   - install Geppetto on local but ONLY use the new V12 container
