--- a/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
+++ b/docs/planning/2021/sprints/sprint 20/10-05-to-10-15.md
@@ -9,13 +9,14 @@
 
 ## Sprint completion notes
 
-- first week without JP
+- first sprint without JP
 - base React generation accomplished - footers, headers, signup screen etc
 - Tamil busy with other project therefore this will proceed slower that anticipated - Harish will do as much as possible given his knowledge
 - Gayathri halve way through Angular course
 - Saranya gaining knowledge of Identity and Authorization Management by implementing the function in Electric Glide
+  - added new Admin Manager UI to generated applications
 - Solved the issues with the new GJS format for CSS and HTML components on the generator starting, helped resolve IAM/AUTH Guard issues in ElectricGlide, 
-  worked with Harish on Architecture of ReactGenManager
+  worked with Harish on Architecture of ReactGenManager, started generating angular v12
 - Manavalan started tech lead activities but he is heavily on another project, also started the design that will allow live deployments in ECS/Fargate when apps 
   have more then 10 Microservices - this is being done by migrating the Geppetto application to use Fargate instead of EC2
 
@@ -29,8 +30,11 @@
 - Harish out sick Monday October 4
 
 - Tamil could not advanced on React demo on Monday October 4th, October 5th
+  - he is very busy on other projects we only involve him when we get stuck
 
 - Surrender was on another project on Monday October 11
+
+- Saranya out on Monday October 18th due to second covid shot
 
 ### Deliverables
 
