updated sprint notes

--- a/docs/planning/2021/sprints/sprint 21/10-19-to-10-29.md
+++ b/docs/planning/2021/sprints/sprint 21/10-19-to-10-29.md
@@ -12,6 +12,9 @@
 
 ### General personnel updates
 
+- Saranya was out: Monday October 18 and October 19 due to vaccine
+- Harish had machine problems later half of Tuesday October 18th continuing into October 19
+
 ### Deliverables
 
 - added at the end of the sprint
