completed sprint 22 notes and created sprint 23 plan

--- a/docs/planning/2021/sprints/sprint 22/11-02-to-11-12.md
+++ b/docs/planning/2021/sprints/sprint 22/11-02-to-11-12.md
@@ -16,11 +16,24 @@
   - Thursday and Friday November 4, and 5 due to Diwali
   - Monday November 8 due to heavy rains
 
+- Saranya
+  - issues with remote machine:
+    - worked 1/2 day on November 9
+    - missed full day on November 10
+
 
 ### Deliverables
 
-- added at the end of the sprint
-
+- Gayathri
+  - completed Angular training and started to learn GrapesJS
+- Harish
+  - generated most static components for new React generation
+- Surrender
+  - making progress with new V12 version identified issues with new version of GrapesJS
+  - added ability to switch between version of GrapesJS so that we can upgrade change the generator easily to use newer or older versions
+- Saranya
+  - completed adding Gcam to ElectricGlide this allows us to have a template for the replacement of Camunda in the Generated applications
+  
 ---
 
 ## UX Assignments
