--- a/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
+++ b/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
@@ -12,10 +12,8 @@
 
 ### General personnel updates
 
-- Entire Team out:
-  - Thursday and Friday November 4, and 5 due to Diwali
-  - Monday November 8 due to heavy rains
-
+- Saranya out:
+  - Monday November 22nd half day due to illness
 
 ### Deliverables
 
