update on sprint notes

--- a/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
+++ b/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
@@ -14,6 +14,7 @@
 
 - Saranya out:
   - Monday November 22nd half day due to illness
+  - Tuesday November 23rd due to illness
 
 ### Deliverables
 
