--- a/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
+++ b/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
@@ -15,6 +15,8 @@
 - Saranya out:
   - Monday November 22nd half day due to illness
   - Tuesday November 23rd due to illness
+- Gayathri
+  - Wednesday November 24 out due to illness
 
 ### Deliverables
 
