--- a/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
+++ b/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
@@ -1,16 +1,19 @@
-# Sprint plan Tuesday June 29 to July 07
+# Sprint plan Tuesday November 30 to December 10
 
 ## Goal/notes for Sprint
 
-1. start BETA-13
-2. continue/complete connector framework/code generation
-3. finish SystemCredentialsManager/Vault generation
-4. Surrender complete Angular course
-5. Harish complete Angular course, adds IBM template, start SEF with Naveen
+1. start BETA-24
 
 ---
 
 ## Sprint completion notes
+
+- added at the end of the sprint
+
+### General personnel updates
+
+
+### Deliverables
 
 - added at the end of the sprint
 
@@ -21,32 +24,24 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - using Geppetto screen designer create a professional Tkt app
-  - continue developing static pages and add more templates until we get to nine (9) total
+  - TBD since we are focused on new version and he is on other projects
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- JP
-  - priority bugs as they arise
-  - Connector framework
-    - complete the Connector framework with help of who ever is around
-
 - Harish
-  - add IBM template
-  - start SEF with Naveenkumar
-  - HOP: finish Angular course, start learning GrapesJS
-
-- Naveenkumar
-  - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+  - continue with React generation
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
-  - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
-  - HOP: finish Angular course
+  - focus on screen designer
+  
+- Saranya
+  - finish GCAM generation
+
+- Gayathri
+  - continue to learn GrapesJS
+  - add first geppetto component - add the new feature component
 
 ---
 
