--- a/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
+++ b/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
@@ -31,7 +31,10 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - continue with React generation
+  - continue with React generation only if we have React developer help
+  - start Angular 13 generation
+    - this should be a copy paste of Angular 10 generator
+    - this should be a copy paste of 
 
 - Surrender
   - focus on screen designer
