added sprint24 plan

--- a/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
+++ b/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
@@ -31,20 +31,24 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - continue with React generation only if we have React developer help
+  - all generation should be using the new desktopV2 UI - stop using the old (Angular 7) UI
   - start Angular 13 generation
-    - this should be a copy paste of Angular 10 generator
-    - this should be a copy paste of 
+    - this should be a copy paste of Angular 7(10) generator - note that the original team did not name Angular 10 correctly and used Angular 7
+    - this should be a copy paste of Angular 7 (10) folder under seed - note that the original team did not name Angular 10 correctly and used Angular 7
+  - only continue with React generation if we have React developer help
 
 - Surrender
   - focus on screen designer
   
 - Saranya
   - finish GCAM generation
+  - take over Angular 13 generation
 
 - Gayathri
   - continue to learn GrapesJS
-  - add first geppetto component - add the new feature component
+    - add save, update screen functionality using version .17.29 of GrapesJS
+    - add AgGrid as your first custom component - work with Surrender as he is finishing this in desktopV2 using version .16.34 of Grapesjs
+  - work with Saranya on the AgGrid tree component for the Authorization screen
 
 ---
 
@@ -54,3 +58,5 @@ Please note to look for specifics tasks in Github this just gives the overall go
 
 - Harish
   - support geppetto deployments
+  - start to deploy desktopV2 to stage
+  - stop deploying desktopV1 to stage only deploy it to dev
