closed out sprint 23

--- a/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
+++ b/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
@@ -20,7 +20,19 @@
 
 ### Deliverables
 
-- added at the end of the sprint
+- Harish
+  - continue with React generation - React base is generated as well as dynamic GJS components, had to stop until we get a React person to help
+
+- Surrender
+  - all basic components are working
+  - 90% completed wit AgGrid
+  
+- Saranya
+  - finish GCAM generation - this was completed and started with the Authorization Crud
+
+- Gayathri
+  - continue to learn GrapesJS - this is progressing well 
+  - add first geppetto component - add the new feature component - this was delayed so that she can fully focus on GrapesJS
 
 ---
 
