fixing stuff with old pr

--- a/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
+++ b/docs/planning/2021/sprints/sprint 23/11-16-to-11-26.md
@@ -1,4 +1,4 @@
-# Sprint plan Tuesday November 16 29 to November 26
+# Sprint plan Tuesday November 16  to November 26
 
 ## Goal/notes for Sprint
 
@@ -12,11 +12,16 @@
 
 ### General personnel updates
 
+- Entire Team out:
+  - Thursday and Friday November 4, and 5 due to Diwali
+  - Monday November 8 due to heavy rains
+
 - Saranya out:
   - Monday November 22nd half day due to illness
   - Tuesday November 23rd due to illness
 - Gayathri
   - Wednesday November 24 out due to illness
+
 
 ### Deliverables
 
@@ -28,7 +33,7 @@
   - 90% completed wit AgGrid
   
 - Saranya
-  - finish GCAM generation - this was completed and started with the Authorization Crud
+  - finish GCAM generation - this was only completed for SEED screen NOT for GJS based screens
 
 - Gayathri
   - continue to learn GrapesJS - this is progressing well 
