--- a/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
+++ b/docs/planning/2021/sprints/sprint 24/11-30-to-12-10.md
@@ -12,6 +12,11 @@
 
 ### General personnel updates
 
+- Saranya out:
+  - Tuesday November 30th due to illness
+  - Wednesday December 1st - illness
+  - Thursday December 2nd and Friday December 3rd illness 
+  - Saranya prettu much missed the entire 2nd week of the sprint
 
 ### Deliverables
 
