fixing stuff with bad pr

--- a/docs/planning/2022/sprints/sprint 02/01-11-to-01-21.md
+++ b/docs/planning/2022/sprints/sprint 02/01-11-to-01-21.md
@@ -2,15 +2,20 @@
 
 ## Goal/notes for Sprint
 
-1. start BETA-13
-2. continue/complete connector framework/code generation
-3. finish SystemCredentialsManager/Vault generation
-4. Surrender complete Angular course
-5. Harish complete Angular course, adds IBM template, start SEF with Naveen
+1. start BETA-24
 
 ---
 
 ## Sprint completion notes
+
+- added at the end of the sprint
+
+### General personnel updates
+
+- Gayathri out:
+  - Friday December 17th
+
+### Deliverables
 
 - added at the end of the sprint
 
@@ -21,32 +26,36 @@
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Ajith
-  - using Geppetto screen designer create a professional Tkt app
-  - continue developing static pages and add more templates until we get to nine (9) total
+  - work with Surrender and Gayathri
+    - need to create screens like Grapedrop - what is missing? do this by using the electricglide screens
+    - start to work on ideas for Geppetto website using the 10d color scheme 
 
 ## Developer Assignments
 
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
-- JP
-  - priority bugs as they arise
-  - Connector framework
-    - complete the Connector framework with help of who ever is around
-
 - Harish
-  - add IBM template
-  - start SEF with Naveenkumar
-  - HOP: finish Angular course, start learning GrapesJS
-
-- Naveenkumar
-  - finish SystemCredentialsManager for connector use
-  - finish adding Bala We Connect template - lets see how good the doc is
+  - work on GCAM
+    - finish GCAM against gjs based screens
+    - authorization screen - adding ability to update the roles assigned to screens - as of Friday December 17th - this proved challenging with agGrid tre view
+  - clean up the Admin menu in all templates
+    - admin menu should NOT be have a sub0menu instead it should launch the Admin page
+  - special pivot for second weeks of sprint 
+  this is due to the progress made by Surrender in adding latest version of gjs (.17.29) and working with Ajith and Gayathri to improve the ability of screen designer to create screens that are close to what is possible in GrapeDrop (example is the electric glide)
+    - test the Angular v13 generator with Surrender for its ability to support gjs (CSS/HTML) with gjs version .17.29
 
 - Surrender
-  - continue to learn GrapesJS by adding pop up to HychartJS 
-  - create internationalization in Angular 12
-  - first Geppetto task add new version of GrapesJS to Geppetto - this will allow him to become familiar with the Geppetto code
-  - HOP: finish Angular course
+  - focus on screen designer and KT
+  
+- Saranya
+  - work on user management for generated applications
+  
+- Gayathri
+  - GrapesJS kt
+  - version .17.29 using agGrid component prepare separate repo to be used for marketing (medium/video)
+  - work with Ajith on GrapeDrop KT as an example of what screen designer should approximate
+  - test Geppetto code with .17.29
+
 
 ---
 
@@ -55,4 +64,4 @@ Please note to look for specifics tasks in Github this just gives the overall go
 Please note to look for specifics tasks in Github this just gives the overall goals for each team member
 
 - Harish
-  - support geppetto deployments
+  - stop deploying v7 of Geppetto and start deploying new version daily
